# data-pipeline-ai

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
ai/: model_training.py  prediction.py
api/: app.py
config/: config.yaml  logging.py  settings.py
docker/: Dockerfile  docker-compose.yml
docker/airflow/: Dockerfile  requirements.txt
ingestion/: api_ingestion.py  kafka_consumer.py  kafka_producer.py
orchestration/: airflow_dag.py
processing/: spark_job.py  transformations.py
storage/: s3_client.py
storage/local/sample_data/: transactions.csv  transactions.jsonl
terraform/: main.tf  variables.tf
tests/: test_pipeline.py
